<resources>

    <!-- app -->
    <string name="app_name">기기 정보</string>
    <string name="app_eng_name">Device Info</string>

    <!-- view -->
    <string name="sim_info">SIM 정보</string>
    <string name="device_info">디바이스 정보</string>
    <string name="system">시스템</string>
    <string name="phone_number">전화번호</string>
    <string name="telecom">통신사</string>
    <string name="device_brand">브랜드명</string>
    <string name="device_model">휴대폰 모델명</string>
    <string name="android_version">안드로이드 버전</string>
    <string name="android_sdk_version">안드로이드 SDK 버전</string>
    <string name="android_id">안드로이드 ID</string>
    <string name="imei">IMEI</string>
    <string name="sim_serial_number">SIM 시리얼 번호</string>
    <string name="kernel">커널</string>
    <string name="build_number">빌드 번호</string>
    <string name="sim_not_found">유심 미장착</string>
    <string name="last_boot_time">마지막 부팅 시간</string>
    <string name="other">기타</string>
    <string name="setting">설정</string>
    <string name="close">닫기</string>
    <string name="button">버튼</string>
    <string name="is_use_hyphen">하이픈 사용 여부</string>
    <string name="option">옵션</string>
    <string name="is_block_capture">화면 캡쳐 차단 여부</string>
    <string name="info">정보</string>
    <string name="version">버전</string>
    <string name="opensource_licenses">오픈소스 라이선스</string>

    <!-- dialog -->
    <string name="permission_denied_message">[설정] > [권한]에서 권한을 허용하시오.</string>
    <string name="exit_app_dialog_title">앱 종료</string>
    <string name="exit_app_dialog_message">앱을 종료합니다.</string>
    <string name="check">확인</string>
    <string name="cancel">취소</string>
    <string name="close_button">닫기 버튼</string>
    <string name="shutdown">종료</string>
    <string name="shutdown_app">앱을 <font color='#f05555'>종료</font>하시겠습니까</string>

    <!-- sample -->
    <string name="sample_phone_number">+821012345678</string>
    <string name="sample_telecom">Android</string>
    <string name="sample_device_brand">google</string>
    <string name="sample_device_model">sdk_gphone_arm64</string>
    <string name="sample_android_version">13</string>
    <string name="sample_android_sdk_version">33</string>
    <string name="sample_android_id">1234567890abcdef</string>
    <string name="sample_imei">123456789012345</string>
    <string name="sample_kernel">Linux armv</string>
    <string name="sample_build_number">SP1A.111122.033</string>

</resources>