<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sim"
            android:icon="@drawable/sim_card_icon"
            android:title="@string/sim_info" />

        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/device_info_icon"
            android:title="@string/device_info" />

        <item
            android:id="@+id/nav_system"
            android:icon="@drawable/build_icon"
            android:title="@string/system" />

    </group>

    <item android:title="@string/other">

        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/setting" />

        </menu>

    </item>

</menu>