<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="ch.lock.mobile.android.deviceinfo.ui.dialog.shutdown.ShutDownDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialogBackground"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:paddingBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="19.4dp"
                android:layout_height="19.4dp"
                android:layout_marginTop="7.4dp"
                android:layout_marginEnd="7.4dp"
                android:background="@drawable/ic_close"
                android:contentDescription="@string/close_button"
                android:onClick="@{() -> activity.dismiss()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="@string/shutdown_app"
                android:textColor="@color/color_000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="37.4dp"
                android:layout_marginTop="30.6dp"
                android:layout_marginEnd="6.7dp"
                android:background="@drawable/bt_cancel_2"
                android:onClick="@{() -> activity.dismiss()}"
                android:text="@string/cancel"
                android:textColor="@color/color_ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/bt_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

            <Button
                android:id="@+id/bt_confirm"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="6.7dp"
                android:layout_marginTop="30.6dp"
                android:layout_marginEnd="37.4dp"
                android:background="@drawable/bt_cancel"
                android:onClick="@{() -> activity.shutdown()}"
                android:text="@string/shutdown"
                android:textColor="@color/color_ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bt_cancel"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>