<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ch.lock.mobile.android.deviceinfo.ui.screen.main.siminfo.SimInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/topView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 전화 번호 레이아웃 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_phoneNumber"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topView">

            <ImageView
                android:id="@+id/iv_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/call_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_phoneNumber_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/color_636b7d"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_phoneNumber"
                app:layout_constraintStart_toEndOf="@id/iv_call"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="34dp"
                android:text="@{viewModel.phoneNumber}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_call"
                app:layout_constraintTop_toBottomOf="@id/tv_phoneNumber_title"
                tools:text="@string/sample_phone_number" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 통신사 레이아웃 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_telecom"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_phoneNumber">

            <ImageView
                android:id="@+id/iv_telecom"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/network_cell_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_telecom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/telecom"
                android:textColor="@color/color_636b7d"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_telecom"
                app:layout_constraintStart_toEndOf="@id/iv_telecom"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_telecom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="34dp"
                android:text="@{viewModel.telecom}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_telecom"
                app:layout_constraintTop_toBottomOf="@id/tv_telecom_title"
                tools:text="@string/sample_telecom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- sim 시리얼 번호 레이아웃 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_sim_serial"
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_telecom">

            <ImageView
                android:id="@+id/iv_sim"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/sim_card_icon_797d86"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sim_serial_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sim_serial_number"
                android:textColor="@color/color_636b7d"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_sim_serial"
                app:layout_constraintStart_toEndOf="@id/iv_sim"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sim_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="34dp"
                android:text="@{viewModel.simNumber}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_sim"
                app:layout_constraintTop_toBottomOf="@id/tv_sim_serial_title"
                tools:text="@string/sample_imei" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>